<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KenSquared</string>
    <string name="version">1.0.0</string>

    <string name="byAuthor">%s by Anthony Sottile</string>
    <string name="versionColon">Version: %s</string>
    <string name="aboutText">For more information and how to play please visit anthonysottile.com/android_kenken.htm for more details.</string>

    <!-- Game Component -->

    <string name="paused">Paused</string>

    <!-- end Game Component -->

    <!-- Menus -->

    <string name="newGame">New Game</string>
    <string name="check">Check</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="exportStatistics">Export Statistics</string>
    <string name="importStatistics">Import Statistics</string>
    <string name="about">About</string>

    <!-- end Menus -->

    <!-- Dialog -->

    <string name="gameSize">Game Size</string>
    <string name="hardMode">Hard Mode</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Preferences -->

    <string name="preferences">Preferences</string>
    <string name="preferencesWarning">Note: Changing preferences will end the current game.</string>

    <string-array name="gameSizes">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <!-- end Preferences -->

    <!-- Statistics -->

    <string name="statistics">Statistics</string>
    <string name="gamesPlayed">Games Played:</string>
    <string name="gamesWon">Games Won:</string>
    <string name="averageTime">Average Time:</string>
    <string name="bestTime">Best Time:</string>
    <string name="bestTimeDate">Best Time Date:</string>
    <string name="clear">Clear</string>

    <string name="confirmClear">Are you sure you want to clear statistics?</string>

    <!-- end Statistics -->

    <!-- Game Win -->

    <string name="youWin">You Win!</string>
    <string name="newHighScore">New High Score!</string>
    <string name="gameTypeColon">Game Type:</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="gameSizeColon">Game Size:</string>
    <string name="gameTime">Game Time:</string>

    <!-- end Game Win -->

    <!-- end Dialog -->

</resources>
